bundled_metadata/force-app/main/default/objects/Program_PSG_Mapping__mdt/Program_PSG_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Program PSG Mapping</label>
    <pluralLabel>Program PSG Mapping</pluralLabel>
</CustomObject>