bundled_metadata/force-app/main/default/objects/Program_PSG_Mapping__mdt/fields/Driving_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Driving_Field_Value__c</fullName>
    <label>Driving Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>