bundled_metadata/force-app/main/default/objects/Program_PSG_Mapping__mdt/fields/Program_Market_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Program_Market_Mapping__c</fullName>
    <label>Program Market Mapping</label>
    <referenceTo>Program_Market_Mapping__mdt</referenceTo>
    <relationshipLabel>Program PSG Mapping</relationshipLabel>
    <relationshipName>Program_PSG_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>