bundled_metadata/force-app/main/default/objects/Program_PSG_Mapping__mdt/fields/PSG_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>PSG_Developer_Name__c</fullName>
    <label>PSG Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>